--- a/package.json
+++ b/package.json
@@ -10,11 +10,10 @@
     "react-router-dom": "^6.10.0",
     "react-scripts": "5.0.1"
   },
+  "proxy": "http://localhost:3000",
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "build": "react-scripts build"
   },
   "eslintConfig": {
     "extends": [
